# api/v2/models/postable_alert.go
@@ -1,19 +1,5 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-// Copyright Prometheus Team
-// Licensed under the Apache License, Version 2.0 (the "License");
-// you may not use this file except in compliance with the License.
-// You may obtain a copy of the License at
-//
-// http://www.apache.org/licenses/LICENSE-2.0
-//
-// Unless required by applicable law or agreed to in writing, software
-// distributed under the License is distributed on an "AS IS" BASIS,
-// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-// See the License for the specific language governing permissions and
-// limitations under the License.
-//
-
 package models
 
 // This file was generated by the swagger tool.
@@ -40,6 +26,9 @@ type PostableAlert struct {
 	// Format: date-time
 	EndsAt strfmt.DateTime `json:"endsAt,omitempty"`
 
+	// rule UID
+	RuleUID string `json:"ruleUID,omitempty"`
+
 	// starts at
 	// Format: date-time
 	StartsAt strfmt.DateTime `json:"startsAt,omitempty"`
@@ -55,6 +44,8 @@ func (m *PostableAlert) UnmarshalJSON(raw []byte) error {
 
 		EndsAt strfmt.DateTime `json:"endsAt,omitempty"`
 
+		RuleUID string `json:"ruleUID,omitempty"`
+
 		StartsAt strfmt.DateTime `json:"startsAt,omitempty"`
 	}
 	if err := swag.ReadJSON(raw, &dataAO0); err != nil {
@@ -64,6 +55,8 @@ func (m *PostableAlert) UnmarshalJSON(raw []byte) error {
 	m.Annotations = dataAO0.Annotations
 
 	m.EndsAt = dataAO0.EndsAt
+
+	m.RuleUID = dataAO0.RuleUID
 
 	m.StartsAt = dataAO0.StartsAt
 
@@ -86,12 +79,16 @@ func (m PostableAlert) MarshalJSON() ([]byte, error) {
 
 		EndsAt strfmt.DateTime `json:"endsAt,omitempty"`
 
+		RuleUID string `json:"ruleUID,omitempty"`
+
 		StartsAt strfmt.DateTime `json:"startsAt,omitempty"`
 	}
 
 	dataAO0.Annotations = m.Annotations
 
 	dataAO0.EndsAt = m.EndsAt
+
+	dataAO0.RuleUID = m.RuleUID
 
 	dataAO0.StartsAt = m.StartsAt
 
